# compass

./: .gitignore  Makefile  README.md  dashboard_pr_age.json  pyproject.toml
.github/workflows/: ci.yaml
backfill/: generate_data.py
compass/: config.py  constants.py  es_models.py  github_utils.py  k8s_handlers.py  pr_age.py  server.py
dashboards/: dashboard_pr_age.json
docker/: Dockerfile  docker-compose.yml  gunicorn_conf.py  prometheus.yml
tests/: test_k8s.py
