[tool.poetry]
name = "compass"
version = "0.1.0"
description = "Metrics and data to guide our engineering"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^1.55"
prometheus-client = "^0.11.0"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
