[tool.poetry]
name = "compass"
version = "0.1.0"
description = "Metrics and data to guide our engineering"
authors = ["Bukukas devops <devops@bukukas.io>"]

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^1.55"
prometheus-client = "^0.11.0"

[tool.poetry.dev-dependencies]
prospector = {extras = ["with_everything"], version = "^1.3.1"}
jedi = {version = "^0.18.0", optional = true}
black = "^21.7b0"
ipython = {version = "^7.25.0", optional = true}
pudb = {version = "^2021.1", optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
